<resources>
    <string name="app_name">WMS Mobile MICD</string>
    <string name="welcome">WMS Mobile App v1.06</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="setup">Setup</string>
    <string name="transfer_container">Transfer Container</string>
    <string name="login">Login</string>
    <string name="server">Server</string>
    <string name="port_number">Port nr</string>
    <string name="database">Database</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="main_menu">Main Menu</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="instance">Instance</string>
    <string name="server_hint">Server name or IP address</string>
    <string name="port_hint">Port number if any</string>
    <string name="user_hint">User name to access the database</string>
    <string name="password_hint">Password</string>
    <string name="instance_hint">Instance name it any</string>
    <string name="database_hint">Database</string>
    <string name="setup_error_server_string">Server name required.</string>
    <string name="setup_error_database_string">Database required.</string>
    <string name="setup_error_username_string">User name required.</string>
    <string name="setup_error_password_string">Password required.</string>
    <string name="setup_error_connection_fail_string">Connection failed.</string>
    <string name="setup_msg_connection_success_string">Connection successful.</string>
    <string name="setup_msg_settings_saved_string">Settings saved.</string>
    <string name="main_error_no_connection_settings">No settings saved or settings invalid, please click on Setup.</string>
    <string name="location">Location</string>
    <string name="program_route_scan">Route scan</string>
    <string name="route_name">Route name</string>
    <string name="route_group">Route group</string>
    <string name="waybills_scanned">Waybill scanned</string>
    <string name="waybills_not_scanned">Waybill not scanned</string>
    <string name="parcels_not_scanned">Parcels not scanned</string>
    <string name="scan_code">Scan code</string>
    <string name="last_waybill_scanned">Last waybill scanned</string>
    <string name="last_parcel_scanned">Last parcel scanned</string>
    <string name="collection_debrief">Collection Debrief</string>
    <string name="exception_code">Exception Code</string>
    <string name="cancel">Cancel</string>
    <string name="program_route_debrief">Route Debrief</string>
    <string name="waybill">Waybill</string>
    <string name="parcel">Parcel</string>
    <string name="program_delivery_scan">Delivery Scan</string>
    <string name="program_delivery_debrief">Delivery Debrief</string>
    <string name="program_exception_scan">Exception Scan</string>
    <string name="last_manifest_scanned">Last Manifest scanned</string>
    <string name="in_exception">In Exception</string>
    <string name="out_exception">Out Exception</string>
    <string name="fail">Fail</string>
    <string name="driver">Driver</string>
    <string name="driveragent">Driver / Agent</string>
    <string name="truck_registration">Truck Registration</string>
    <string name="collection_number">Collection Nr</string>
    <string name="reset">Reset</string>
    <string name="number_of_parcels">Number of parcels</string>
    <string name="invalid_number_of_parcels">Invalid number of parcels</string>
    <string name="parcels_scanned">Parcels scanned</string>
    <string name="parcels_scanned_exceeded">Parcels scanned exceeded.</string>
    <string name="parcel_already_scanned">Parcel already scanned.</string>
    <string name="goods_received">Goods received</string>
    <string name="warehouse">Warehouse</string>
    <string name="please_select_warehouse">Please select a warehouse</string>
    <string name="manifest_number">PO Number</string>
    <string name="reference1">Reference 1</string>
    <string name="reference2">Reference 2</string>
    <string name="reference3">Reference 3</string>
    <string name="reference4">Reference 4</string>
    <string name="reference5">Reference 5</string>
    <string name="next">Next</string>
    <string name="manifest_invalid">Manifest is invalid</string>
    <string name="po_invalid">PO is invalid</string>
    <string name="process">Process</string>
    <string name="scan">Scan</string>
    <string name="exception_required">Please supply an exception code</string>
    <string name="last_item_scanned">Last item scanned</string>
    <string name="receive_items">Receive multiple items</string>
    <string name="process_pick_slips">Process Pick slips</string>
    <string name="container_number">Container Nr.</string>
    <string name="scan_mode">Scan Mode</string>
    <string name="key_mode">Key Mode</string>
    <string name="take_photo_of_empty_container">Take photo of empty container</string>
    <string name="take_photo_of_full_container">Take photo of full container</string>
    <string name="take_photo_of_closed_container">Take photo of door open container</string>
    <string name="take_photo_of_sealed_container">Take photo of closed container</string>
    <string name="item_number">Item Nr.</string>
    <string name="bin_location">Bin</string>
    <string name="principle">Principle</string>
    <string name="please_supply_items">Please supply items...</string>
    <string name="putaway">Put away</string>
    <string name="recommended_bin_location">Sys Bin </string>
    <string name="bin_principle_transfer">Bin/Principle Transfer</string>
    <string name="items_scanned">Items scanned</string>
    <string name="stock_take">Stock Take</string>
    <string name="placeholder">\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="sheet_nr">Sheet Nr</string>
    <string name="stock_take_sheets_unavailable">No stock take sheets assigned</string>
    <string name="complete_stock_sheet">Complete stock sheet</string>
    <string name="create_pickslip">Capture a pickslip</string>
    <string name="quantity">Quantity</string>
    <string name="itemcode">Item Code</string>
    <string name="cargo_goods_receipt_main_menu">Cargo Goods Receipt Main Menu</string>
    <string name="cargo_goods_dispatch_main_menu">Cargo Goods Dispatch Main Menu</string>
    <string name="scan_sugar_bags">Sugar Bags</string>
    <string name="gate_in_document_number">Document Nr.</string>
    <string name="mineral_receipt_loose_bulk">Mineral Loose Bulk</string>
    <string name="mineral_receipt_bags">Mineral Bags</string>
    <string name="cargo_goods_receipt">Cargo Goods Receipt</string>
    <string name="cargo_goods_dispatch">Cargo Goods Dispatch</string>
    <string name="document_info">Document Info</string>
    <string name="bay_locations">Bay Location</string>
    <string name="weather_condition">Weather Conditions</string>
    <string name="dispatch">Cargo Dispatch</string>
    <string name="end_weather_condition">End Weather Conditions</string>
    <string name="rainy">Rainy</string>
    <string name="cloudy">Cloudy</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="sunny">Sunny</string>
    <string name="Windy">Windy</string>
    <string name="supply_weather_condition">Please provide weather conditions</string>
    <string name="take_photo_of_vehicle">Vehicle</string>
    <string name="tarp_right_side">Right Side of Tarp</string>
    <string name="tare_weight">Tare Weight</string>
    <string name="tarp_left_side">Left Side of Tarp</string>
    <string name="tarp_top_side">Top Side of Tarp</string>
    <string name="no_tarp_right_side">Right Side without Tarp</string>
    <string name="no_tarp_left_side">Left Side without Tarp</string>
    <string name="no_tarp_top_side">Top Side without Tarp</string>
    <string name="take_photo">Please take photos of the following items</string>
    <string name="take_photo_item">Please take photos of each item</string>
    <string name="any_cargo_damage">Are there any cargo damages?</string>
    <string name="any_cargo_contaminated">Are there any cargo contaminated?</string>
    <string name="any_cargo_dirty">Are there any dirty bags?</string>
    <string name="any_cargo_wet">Are there any wet bags?</string>
    <string name="any_cargo_moisture">Are there any moisture?</string>
    <string name="any_cargo_missing">Are there any missing bags?</string>
    <string name="any_operational_damage">Are there any operational damages?</string>
    <string name="missing_bag_area">Take photo of missing area</string>
    <string name="photo_item">Take photo of item</string>
    <string name="cargo_damage_1">Take photo of cargo damage 1</string>
    <string name="cargo_damage_2">Take photo of cargo damage 2</string>
    <string name="cargo_contamination_1">Take photo of contaminated cargo 1</string>
    <string name="cargo_contamination_2">Take photo of contaminated cargo 2</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="slings_and_bag_count">Slings and Bag Counts</string>
    <string name="sling_number">Sling Nr</string>
    <string name="weight">Weight</string>
    <string name="count">Count</string>
    <string name="batch_number">Batch No</string>
    <string name="how_many">How many?</string>
    <string name="how_many_slings">How many slings?</string>
    <string name="date">Date</string>
    <string name="random_batch_capture">Random Batch Capture</string>
    <string name="batch_capture_action">Please scan random batch number and production date</string>
    <string name="comments">Comments</string>
    <string name="forklift_driver">Forklift driver</string>
    <string name="whs_tally_clerk">Sugar / Tally Clerk</string>
    <string name="tally_clerk">Tally Clerk</string>
    <string name="mineral_loose_tally_clerk">Mineral Loose Tally Clerk</string>
    <string name="stockpile_board">Stockpile Board</string>
    <string name="full_truck_with_seals">Full truck with seals</string>
    <string name="full_truck_with_trailer_a">Full Truck with Trailer A Top</string>
    <string name="full_truck_with_trailer_b">Full Truck with Trailer B Top</string>
    <string name="trailer_a_cargo_top">Trailer A Cargo Top</string>
    <string name="trailer_b_cargo_top">Trailer B Cargo Top</string>
    <string name="trailer_a_cargo_tipped">Trailer A Cargo Tipped</string>
    <string name="trailer_a_cargo_empty_bins">Trailer A Cargo Empty Bins</string>
    <string name="trailer_b_cargo_tipped">Trailer B Cargo Tipped</string>
    <string name="trailer_b_cargo_empty_bins">Trailer B Cargo Empty Bins</string>
    <string name="weigh_bags">Weigh Bags</string>
    <string name="bag_nr">Bag Nr</string>
    <string name="how_many_bags">How many bags?</string>
    <string name="container_info">Container Info</string>
    <string name="photo_full_frame">Full Frame</string>
    <string name="photo_container_and_number">Container Door with Number</string>
    <string name="photo_half_full_container">Photo of half full container</string>
    <string name="total_weight">Total Weight</string>
    <string name="total_bags">Total Bags</string>
    <string name="photo_packed_container_both_doors_open">Packed container both doors open</string>
    <string name="photo_packed_container_one_door_open">Packed container one door open</string>
    <string name="photo_packed_container_both_doors_closed">Packed container both doors closed</string>
    <string name="container_with_seals">Container with seals</string>
    <string name="weight_reading_on_scale">Weight reading on scale</string>
    <string name="yard_clerk">Yard Clerk</string>
    <string name="load_empty_container">Load Empty Container</string>
    <string name="empty_container_status_change">Empty Container Status Change</string>
    <string name="dispatch_empty_container_loading">Dispatch Empty Container Loading</string>
</resources>