<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CargoGrnSugarBags10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/cargo_goods_receipt"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/cargo_goods_receipt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/end_weather_condition"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/end_weather_condition" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/CargoGrnSugarBags10_chkCloudy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cloudy"
            android:layout_weight="1"
            tools:text="@string/cloudy" />

        <CheckBox
            android:id="@+id/CargoGrnSugarBags10_chkRain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rain"
            tools:text="@string/rain" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/CargoGrnSugarBags10_chkSnow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/snow"
            tools:text="@string/snow" />

        <CheckBox
            android:id="@+id/CargoGrnSugarBags10_chkSunny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunny"
            tools:text="@string/sunny" />
    </LinearLayout>


    <CheckBox
        android:id="@+id/CargoGrnSugarBags10_chkWindy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Windy"
        tools:text="@string/Windy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/any_operational_damage"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/any_operational_damage" />

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/CargoGrnSugarBags10_rbYes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/yes"/>
        <RadioButton
            android:id="@+id/CargoGrnSugarBags10_rbNo"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:checked="true"
            android:text="@string/no"
            android:onClick="onRadioButtonClicked"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CargoGrnSugarBags10_lblSlingNumber"
            android:layout_width="match_parent"
            android:textAlignment="textEnd"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/how_many_bags"
            tools:text="@string/how_many_bags"/>
        <EditText
            android:id="@+id/CargoGrnSugarBags10_txtCount"
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:textAlignment="textStart"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="number"
            android:text="0"
            android:background="@drawable/rounded_edittext" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CargoGrnSugarBags10_lblWeight"
            android:layout_width="match_parent"
            android:textAlignment="textEnd"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight"
            tools:text="@string/weight"/>
        <EditText
            android:id="@+id/CargoGrnSugarBags10_txtWeight"
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:textAlignment="textStart"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="numberDecimal"
            android:text="0.00"
            android:background="@drawable/rounded_edittext" />
    </LinearLayout>
    <TextView
        android:id="@+id/CargoGrnSugarBags10_lblComments"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        tools:text="@string/comments"/>

    <EditText
        android:id="@+id/CargoGrnSugarBags10_txtComments"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:enabled="true"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/CargoGrnSugarBags10_btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:nextFocusLeft="@+id/CargoGrnSugarBags10_btnBack"
            android:nextFocusRight="@+id/CargoGrnSugarBags10_btnBack"
            android:nextFocusUp="@+id/CargoGrnSugarBags10_btnBack"
            android:nextFocusDown="@+id/CargoGrnSugarBags10_btnBack"
            android:nextFocusForward="@+id/CargoGrnSugarBags10_btnBack"
            android:onClick="CargoGrnSugarBags10_btnBack_Clicked"
            android:text="@string/back"
            android:visibility="invisible"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/CargoGrnSugarBags10_btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:nextFocusLeft="@+id/CargoGrnSugarBags10_btnNext"
            android:nextFocusRight="@+id/CargoGrnSugarBags10_btnNext"
            android:nextFocusUp="@+id/CargoGrnSugarBags10_btnNext"
            android:nextFocusDown="@+id/CargoGrnSugarBags10_btnNext"
            android:nextFocusForward="@+id/CargoGrnSugarBags10_btnNext"
            android:onClick="CargoGrnSugarBags10_btnNext_Clicked"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>